yaml-applications/prod/driver-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: driver-api
  name: driver-api
  namespace: plannify-2
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: driver-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: driver-api
    spec:
      containers:
        - name: driver-api
          image: ghcr.io/plannify-truck-driver/driver-api:0.3.6
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "50m"
              memory: "128Mi"
          ports:
            - containerPort: 3000
              protocol: TCP
            - containerPort: 3001
              protocol: TCP
          startupProbe:
            httpGet:
              path: /health
              port: 3001
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: ghcr-secret
