yaml-applications/prod/driver-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: driver-api
  namespace: plannify-2
spec:
  type: ClusterIP
  selector:
    app: driver-api
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
