yaml-applications/prod/driver-api/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: driver-api-stripprefix
  namespace: plannify-2
spec:
  stripPrefix:
    prefixes:
      - /driver/v1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: driver-api
  namespace: plannify-2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-plannify
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: plannify-2-driver-api-stripprefix@kubernetescrd
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: api.plannify.be
      http:
        paths:
          - path: /driver/v1
            pathType: Prefix
            backend:
              service:
                name: driver-api
                port:
                  number: 80
    - host: api2.plannify.be
      http:
        paths:
          - path: /driver/v1
            pathType: Prefix
            backend:
              service:
                name: driver-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.plannify.be
      secretName: api-plannify-be-tls
    - hosts:
        - api2.plannify.be
      secretName: api-2-plannify-be-tls
